Back to MS naming convention

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,42 +6,44 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 project(AirMata)
 
 add_executable(AirMata
-    src/Core/IO/Loop.hpp
+    src/Core/IO/Loop.h
     src/Core/IO/Loop.cpp
-    src/Core/IO/Resource.hpp
+    src/Core/IO/Resource.h
     src/Core/IO/Resource.cpp
+    src/Core/IO/Action.h
+    src/Core/IO/Action.cpp
 
-    src/Core/Event/Event.hpp
+    src/Core/Event/Event.h
     src/Core/Event/Event.cpp
-    src/Core/Event/KeyEvent.hpp
+    src/Core/Event/KeyEvent.h
     src/Core/Event/KeyEvent.cpp
 
-    src/Core/Utility/ByteChecker.hpp
+    src/Core/Utility/ByteChecker.h
     src/Core/Utility/ByteChecker.cpp
-    src/Core/Utility/EnumBitManipulator.hpp
+    src/Core/Utility/EnumBitManipulator.h
 
-    src/Core/UI/Sequence.hpp
+    src/Core/UI/Sequence.h
 
-    src/Core/UI/Component/Component.hpp
+    src/Core/UI/Component/Component.h
     src/Core/UI/Component/Component.cpp
-    src/Core/UI/Component/Buffer.hpp
+    src/Core/UI/Component/Buffer.h
     src/Core/UI/Component/Buffer.cpp
-    src/Core/UI/Component/StatusBar.hpp
+    src/Core/UI/Component/StatusBar.h
     src/Core/UI/Component/StatusBar.cpp
 
-    src/Core/Container/Array.hpp
-    src/Core/Container/String.hpp
-    src/Core/Container/Function.hpp
-    src/Core/Container/Vector.hpp
+    src/Core/Container/Array.h
+    src/Core/Container/String.h
+    src/Core/Container/Function.h
+    src/Core/Container/Vector.h
     src/Core/Container/Vector.cpp
-    src/Core/Container/HashTable.hpp
+    src/Core/Container/HashTable.h
 
-    src/Core/ArgumentSolver.hpp
+    src/Core/ArgumentSolver.h
     src/Core/ArgumentSolver.cpp
 
-    src/Core/Context.hpp
+    src/Core/Context.h
 
-    src/Core/EntryPoint.hpp
+    src/Core/EntryPoint.h
     src/Core/EntryPoint.cpp
 
 	src/main.cpp
